# scanner

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  base_8h.html  base_8h__dep__incl.map  base_8h__dep__incl.md5  base_8h__incl.map  base_8h__incl.md5  base_8h_source.html  build.cmd  build.sh  classes.html  classscanner_1_1Base-members.html  classscanner_1_1Base.html  classscanner_1_1Base__coll__graph.map  classscanner_1_1Base__coll__graph.md5  classscanner_1_1Hasher-members.html  classscanner_1_1Hasher.html  classscanner_1_1Logger-members.html  classscanner_1_1Logger.html  classscanner_1_1Logger__coll__graph.map  classscanner_1_1Logger__coll__graph.md5  classscanner_1_1MD5-members.html  classscanner_1_1MD5.html  classscanner_1_1MD5__coll__graph.map  classscanner_1_1MD5__coll__graph.md5  classscanner_1_1Scanner-members.html  classscanner_1_1Scanner.html  classscanner_1_1Scanner__coll__graph.map  classscanner_1_1Scanner__coll__graph.md5  classscanner_1_1ThreadPool-members.html  classscanner_1_1ThreadPool.html  classscanner_1_1ThreadPool__coll__graph.map  classscanner_1_1ThreadPool__coll__graph.md5  core_8h.html  core_8h__dep__incl.map  core_8h__dep__incl.md5  core_8h__incl.map  (+56 more)
.github/workflows/: docs.yml
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: add.h  base.h  core.h  hasher.h  logger.h  md5.h  scanner.h  thread_pool.h
lib/src/: add.cpp  base.cpp  core.cpp  hasher.cpp  hasher.h  logger.cpp  md5.cpp  scanner.cpp  thread_pool.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  files_3.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  searchdata.js  typedefs_0.js  (+14 more)
tests/: CMakeLists.txt  add_test.cpp  base_test.cpp  hasher_test.cpp  md5_test.cpp  scanner_test.cpp
tests/data/: base.csv  data_32768.txt  data_4159.txt  random_text.txt
trash/dll/: CMakeLists.txt  defines.h  interface.cpp  interface.h
trash/src/: CMakeLists.txt  main.cpp
trash/stat_lib/: CMakeLists.txt  printer.cpp
